[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/ChangeStatue.gd" type="Script" id=1]
[ext_resource path="res://scenes/assets/AvatarSwapperSprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/instance/switches/singingSwitchParticles.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 371.849, 92.7326 )

[node name="ChangeStatue" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.694717, 23.6507 )
shape = SubResource( 1 )

[node name="singingSwitchParticles" parent="." instance=ExtResource( 3 )]
position = Vector2( 1.42644, 0.456039 )

[node name="AvatarSwapper" parent="." instance=ExtResource( 2 )]
[connection signal="body_entered" from="." to="." method="_on_ChangeStatue_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ChangeStatue_body_exited"]
